@@ -1077,6 +1077,8 @@ database {
         To exclude a file from the update, create a file called
         <filename>.mpdignore</filename> in its parent directory.  Each
         line of that file may contain a list of shell wildcards.
+        Matching files in the current directory and all subdirectories
+        are excluded.
       </para>
     </section>
 
